tests/fixtures/invalid/str_add_float.py
# Cannot add Str and Float
x: float = "hello" + 1.0
